--- a/charts/koel-next/templates/koel-cronjob.yaml
+++ b/charts/koel-next/templates/koel-cronjob.yaml
@@ -116,6 +116,14 @@ spec:
                 value: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-covers
       {{- end }}
       {{- end }}
+      {{- if .Values.koel.persistence.search-indexes.enabled }}
+              - name: SEARCH_INDEXES_PVC
+      {{- if .Values.koel.persistence.search-indexes.claimName }}
+                value: "{{ .Values.koel.persistence.search-indexes.claimName }}"
+      {{- else }}
+                value: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-search-indexes
+      {{- end }}
+      {{- end }}
       {{- if .Values.koel.persistence.data.enabled }}
               - name: DATA_PVC
       {{- if .Values.koel.persistence.data.claimName }}
@@ -208,6 +216,13 @@ spec:
                 mountPath: /var/www/html/public/img/covers
               {{- if .Values.koel.persistence.covers.subPath }}
                 subPath: {{ .Values.koel.persistence.covers.subPath }}
+              {{- end }}
+              {{- end }}
+              {{- if .Values.koel.persistence.search-indexes.enabled }}
+              - name: search-indexes
+                mountPath: /var/www/html/storage/search-indexes
+              {{- if .Values.koel.persistence.search-indexes.subPath }}
+                subPath: {{ .Values.koel.persistence.search-indexes.subPath }}
               {{- end }}
               {{- end }}
               {{- if .Values.koel.persistence.data.enabled }}
