--- a/charts/koel-next/templates/koel-deployment.yaml
+++ b/charts/koel-next/templates/koel-deployment.yaml
@@ -121,10 +121,10 @@ spec:
             value: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-covers
   {{- end }}
   {{- end }}
-  {{- if .Values.koel.persistence.search-indexes.enabled }}
+  {{- if .Values.koel.persistence.searchIndexes.enabled }}
           - name: SEACH_INDEXES_PVC
-  {{- if .Values.koel.persistence.search-indexes.claimName }}
-            value: "{{ .Values.koel.persistence.search-indexes.claimName }}"
+  {{- if .Values.koel.persistence.searchIndexes.claimName }}
+            value: "{{ .Values.koel.persistence.searchIndexes.claimName }}"
   {{- else }}
             value: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-search-indexes
   {{- end }}
@@ -221,11 +221,11 @@ spec:
             subPath: {{ .Values.koel.persistence.covers.subPath }}
           {{- end }}
           {{- end }}
-          {{- if .Values.koel.persistence.search-indexes.enabled }}
+          {{- if .Values.koel.persistence.searchIndexes.enabled }}
           - name: search-indexes
             mountPath: /var/www/html/storage/search-indexes
-          {{- if .Values.koel.persistence.search-indexes.subPath }}
-            subPath: {{ .Values.koel.persistence.search-indexes.subPath }}
+          {{- if .Values.koel.persistence.searchIndexes.subPath }}
+            subPath: {{ .Values.koel.persistence.searchIndexes.subPath }}
           {{- end }}
           {{- end }}
           {{- if .Values.koel.persistence.data.enabled }}
@@ -291,11 +291,11 @@ spec:
           claimName: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-covers
   {{- end }}
 {{- end }}
-{{- if .Values.koel.persistence.search-indexes.enabled }}
+{{- if .Values.koel.persistence.searchIndexes.enabled }}
       - name: search-indexes
         persistentVolumeClaim:
-  {{- if .Values.koel.persistence.search-indexes.claimName }}
-          claimName: "{{ .Values.koel.persistence.search-indexes.claimName }}"
+  {{- if .Values.koel.persistence.searchIndexes.claimName }}
+          claimName: "{{ .Values.koel.persistence.searchIndexes.claimName }}"
   {{- else }}
           claimName: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-search-indexes
   {{- end }}
