--- a/charts/koel-next/templates/koel-volumes.yaml
+++ b/charts/koel-next/templates/koel-volumes.yaml
@@ -36,7 +36,7 @@ spec:
   storageClassName: {{ .Values.koel.persistence.covers.storageClass | quote }}
 {{- end }}
 {{- end }}
-{{- if and (not .Values.koel.persistence.data.claimName) .Values.koel.persistence.data.enabled  }}
+{{- if and (not .Values.koel.persistence.searchIndexes.claimName) .Values.koel.persistence.searchIndexes.enabled  }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
