koel-next: change koel.service.defaultProtocol default

--- a/charts/koel-next/values.yaml
+++ b/charts/koel-next/values.yaml
@@ -219,7 +219,7 @@ koel:
   ## templates/koel-service.yaml
   service:
     type: ClusterIP
-    defaultProtocol: "https"
+    defaultProtocol: "http"
     ports:
       http: 80
       https: 443
