koel-next: ensure configMap works with envFrom

--- a/charts/koel-next/templates/koel-configmap.yaml
+++ b/charts/koel-next/templates/koel-configmap.yaml
@@ -8,15 +8,14 @@ metadata:
     {{- include "koel.labels" . | nindent 4 }}
     component: {{ .Values.koel.component }}
 data:
-  env: |
-    FORCE_HTTPS={{ .Values.forceHttps }}
-    STREAMING_METHOD={{ .Values.streamingMethod }}
-    LOG_CHANNEL={{ .Values.logChannel }}
-    APP_URL={{ .Values.appUrl }}
-    APP_ENV={{ .Values.appEnv }}
-    APP_KEY={{ .Values.appKey }}
-    DEFAULT_ADMIN_NAME={{ .Values.adminName }}
-    DEFAULT_ADMIN_EMAIL={{ .Values.adminEmail }}
-    DEFAULT_ADMIN_PASSWORD={{ .Values.adminPassword }}
-    MEDIA_PATH={{ .Values.mediaPath }}
+  FORCE_HTTPS: {{ .Values.forceHttps }}
+  STREAMING_METHOD: {{ .Values.streamingMethod }}
+  LOG_CHANNEL: {{ .Values.logChannel }}
+  APP_URL: {{ .Values.appUrl }}
+  APP_ENV: {{ .Values.appEnv }}
+  APP_KEY: {{ .Values.appKey }}
+  DEFAULT_ADMIN_NAME: {{ .Values.adminName }}
+  DEFAULT_ADMIN_EMAIL: {{ .Values.adminEmail }}
+  DEFAULT_ADMIN_PASSWORD: {{ .Values.adminPassword }}
+  MEDIA_PATH: {{ .Values.mediaPath }}
 {{- end }}
