koel-next: ensure MEMORY_LIMIT doesn't use M...

--- a/charts/koel-next/values.yaml
+++ b/charts/koel-next/values.yaml
@@ -135,7 +135,7 @@ adminPassword: changeme
 # The following is the same as --set extraEnv.FOO="bar"
 # extraEnv:
 #   FOO: "bar"
-#   MEMORY_LIMIT: "1024M"
+#   MEMORY_LIMIT: "1024"
 #   YOUTUBE_API_KEY: "key"
 #   TRANSCODE_FLAC: false
 #   OUTPUT_BIT_RATE: "160"
