roundcube: added database.extraEnv value

--- a/charts/roundcube/templates/roundcube-database-deployment.yaml
+++ b/charts/roundcube/templates/roundcube-database-deployment.yaml
@@ -87,6 +87,11 @@ spec:
             secretKeyRef:
               name: {{ template "roundcube.fullname" . }}-{{ .Values.database.component }}-secret
               key: MYSQL_USER
+        # Extra ENV Values supplied by user
+        {{- range $key, $value := .Values.database.extraEnv }}
+        - name: {{ $key }}
+          value: "{{ $value }}"
+        {{- end }}
         {{- if .Values.database.probe.liveness.enabled }}
         livenessProbe:
           exec:
