--- a/charts/roundcube/values.yaml
+++ b/charts/roundcube/values.yaml
@@ -385,3 +385,7 @@ database:
   service:
     annotations: {}
   deploymentAnnotations: {}
+  # You can add as many Additional ENV variables here
+  # The following is the same as --set database.extraEnv.FOO="bar"
+  # extraEnv:
+  #   FOO: "bar"
