--- a/charts/osp/templates/osp-core-ingress.yaml
+++ b/charts/osp/templates/osp-core-ingress.yaml
@@ -1,5 +1,9 @@
 {{- if .Values.osp_core.ingress.enabled }}
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+apiVersion: networking.k8s.io/v1
+{{- else }}
 apiVersion: networking.k8s.io/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
   labels:
@@ -24,9 +28,18 @@ spec:
     - http:
         paths:
           - path: {{ .Values.osp_core.ingress.path }}
+            {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+            pathType: Prefix
+            backend:
+              service:
+                name: "{{ template "osp.fullname" . }}-{{ .Values.osp_core.component }}"
+                port:
+                  number: {{ .Values.osp_core.service.port }}
+            {{- else }}
             backend:
               serviceName: "{{ template "osp.fullname" . }}-{{ .Values.osp_core.component }}"
               servicePort: {{ .Values.osp_core.service.port }}
+            {{- end }}
       {{- if .Values.osp_core.ingress.hostname }}
       host: {{ .Values.osp_core.ingress.hostname }}
       {{- end }}
