emby: added ingressClassName

--- a/charts/emby/values.yaml
+++ b/charts/emby/values.yaml
@@ -142,6 +142,7 @@ serviceTCP:
 
 ingress:
   enabled: false
+  className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
