--- a/charts/emby/templates/ingress.yaml
+++ b/charts/emby/templates/ingress.yaml
@@ -22,6 +22,9 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+{{- if and .Values.ingress.className (.Capabilities.APIVersions.Has "networking.k8s.io/v1") }}
+  ingressClassName: {{ .Values.ingress.className }}
+{{- end }}
 {{- if .Values.ingress.tls }}
   tls:
   {{- range .Values.ingress.tls }}
