koel-next: added ingressClassName

--- a/charts/koel-next/values.yaml
+++ b/charts/koel-next/values.yaml
@@ -239,6 +239,7 @@ koel:
   ##
   ingress:
     enabled: false
+    className: ""
     annotations: {}
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
