--- a/charts/koel-next/templates/koel-ingress.yaml
+++ b/charts/koel-next/templates/koel-ingress.yaml
@@ -26,6 +26,9 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+{{- if and .Values.koel.ingress.className (.Capabilities.APIVersions.Has "networking.k8s.io/v1") }}
+  ingressClassName: {{ .Values.koel.ingress.className }}
+{{- end }}
 {{- if .Values.koel.ingress.tls }}
   tls:
   {{- range .Values.koel.ingress.tls }}
